<resources>
    <string name="app_name">FestEvent</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_profil">Profil</string>
    <string name="title_nav_page">All</string>
    <string name="search_title">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="email_confirm_sent">We sent you a confirmation email.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First name</string>
    <string name="prompt_lname">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_empty_field">Field must not be empty</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_account_yet">No account ? Register here</string>
    <string name="action_register">Register</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="error_no_match_password">Passwords don\'t match</string>
    <string name="photos_text">Photos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_profil_pic">Profil Picture</string>
    <string name="src_profil_pic">Select source</string>
    <string name="picture_string">Picture</string>
    <string name="cancel_string">cancel</string>
    <string name="publicate_title">publicate</string>
    <string name="ok">OK</string>
    <string name="publicate_success">Publication uploaded !</string>
</resources>
