<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_actuality"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/icn_account"
        android:title="@string/title_profil"
        tools:icon="@android:drawable/sym_def_app_icon" />

    <item
        android:id="@+id/navigation_all"
        android:icon="@drawable/icn_account"
        android:title="@string/title_nav_page"
        tools:icon="@android:drawable/sym_def_app_icon" />
</menu>
